# mytips

./: .gitignore  DOUBAO_FIX.md  DRAG_DROP_IMPROVEMENT.md  FILE_UPLOAD_FEATURE.md  MARKDOWN_DRAG_DROP.md  MARKDOWN_UPGRADE_SUMMARY.md  README.md  README.zh.md  build_action.sh  build_android.sh  build_linux.sh  index.html  mermaid-test.html  mytips.sqld  optimize_system.sh  package-lock.json  package.json  tailwind.config.js  test-codemirror.html  test-inline-code.md  test-markdown.md  test-mermaid-debug.html  test-mermaid.md  video-debug-progress.md  vite.config.ts
.cursor/rules/: project-structure.mdc  this.mdc
.github/workflows/: release.yml  release.yml.bak
.zed/: settings.json
doc/: analysis-progress.md  arm-linux-appimage-fix.md  arm-linux-build-fix.md  codemirror-scrollbar-fix.md  database-architecture-analysis.md  localstorage-to-pinia-migration.md  media-cleanup-design.md  mermaid-implementation.md  mp4-playback-fix.md  mp4-video-playback-fix-progress.md  mp4-video-url-fix.md  update-fix-progress.md  video-debug-progress.md  video-rendering-fix.md
docs/: AUTO_UPDATE.md  ai.rs  complete_fix_summary.md  fix_db_and_async_errors_2025-07-16.md  sync_fix_summary.md  timeout_fix_summary.md
public/styles/: milkdown-theme.css
scripts/: generate-update-manifest.cjs  generate-update-manifest.js
src/: App.vue  global_shortcut.rs  lib.rs  main.ts  shims-lowlight.d.ts  shims-refractor-langs.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  global_shortcut.rs  icon-2（拖移项目） 1.tiff  lib.rs  main.rs
src-tauri/src/api/: certificates.rs  clipboard_api.rs  database.rs  database_manager.rs  encryption.rs  mod.rs  shortcuts.rs  templates.rs  updater.rs
src-tauri/src/api/ai/: conversations.rs  doubao.rs  grok.rs  mod.rs  models.rs  rig_client.rs  roles.rs  service.rs
src-tauri/src/api/audio/: ai_analysis.rs  mod.rs  models.rs  optimization.rs  search.rs  storage.rs  transcription.rs
src-tauri/src/api/categories/: mod.rs
src-tauri/src/api/export/: mod.rs
src-tauri/src/api/import/: mod.rs
src-tauri/src/api/media/: mod.rs
src-tauri/src/api/settings/: mod.rs
src-tauri/src/api/sync/: mod.rs
src-tauri/src/api/tags/: mod.rs
src-tauri/src/api/tips/: mod.rs
src-tauri/src/db/: manager.rs  mod.rs  models.rs  operations.rs
src-tauri/src/sync/: builtin_sync.rs  conflict_resolver.rs  connection_pool.rs  error_handling.rs  health_checker.rs  incremental_sync.rs  libsql_adapter.rs  libsql_sync_manager.rs  mod.rs  monitoring.rs  transaction_manager.rs
src-tauri/src/sync/api/sync/: mod.rs
src/api/: encryption.rs
src/api/tips/: mod.rs
src/assets/: dark-theme.css  globals.scss  main.css
src/assets/styles/: _editor.scss
src/components/: AIAssistant.vue  CodeMirrorEditor.vue  CommonDialog.vue  EditorFooter.vue  EditorToolbar.vue  EditorTopBar.vue  EncryptedContent.vue  FloatingAIButton.vue  ImportDialog.vue  MainLayout.vue  MarkdownDropPreview.vue  MarkdownEditor.vue  NoteEditor.vue  NoteList.vue  NotebookItem.vue  PasswordDialog.vue  ProseMirrorEditor.vue  SideNavBar.vue  SyncStatusIndicator.vue  TagSelector.vue  TiptapEditor.vue  ToastContainer.vue  UpdateDialog.vue  UpdateManager.vue
src/components/audio/: AudioPlayer.vue  AudioRecorder.vue
src/components/dialogs/: AIExplanationDialog.vue  AITranslationDialog.vue  ConflictResolutionDialog.vue  SyncHistoryDialog.vue  TipInputDialog.vue  TipResultDialog.vue
src/components/settings/: AISettings.vue  AboutSettings.vue  AppSettings.vue  AppearanceSettings.vue  ClipboardSettings.vue  DataSettings.vue  NetworkSettings.vue  README.md  TemplateSettings.vue  UpdateSettings.vue
src/composables/: useResponsive.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/services/: ai.ts  aiService.ts  api.ts  appInitializer.ts  databaseService.ts  dialog.ts  markdownService.ts  notification.ts
src/stores/: aiStore.ts  databaseStore.ts  encryptionStore.ts  localStorageStore.ts  notificationStore.ts  tipTemplateStore.ts  tipsStore.ts  uiStore.ts  updateStore.ts
src/types/: database.ts  markdown-plugins.d.ts  milkdown.d.ts  prosemirror-highlight.d.ts
src/utils/: audioCache.ts  formatters.ts
src/views/: AIAssistant.vue  ClipboardHistory.vue  Editor.vue  Home.vue  Settings.vue
src/workers/: markdown.worker.ts
