[package]
name = "mytips"
version = "1.1.1"
description = "一款本地优先的笔记和代码片段管理工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mytips_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon", "rustls-tls"] }
libsql = { version = "0.9.17", features = ["core", "replication", "remote"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "6.0.0"
thiserror = "2.0.12"
anyhow = "1.0.75"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1.4"
genai = "0.3.0"
tokio-stream = "0.1.14"
futures = "0.3"
tauri-plugin-clipboard-manager = "2"
once_cell = "1.19.0"
pulldown-cmark = "0.9.3"
printpdf = "0.6.0"
enigo = "0.5.0"
blake3 = "1.8.2"
sha2 = "0.10"
fs_extra = "1.3.0"
lru = "0.12"
regex = "1.0"
tauri-plugin-global-shortcut = "2"
flate2 = "1.0"
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
tauri-plugin-updater = "2"
zip = "0.6"
tauri-plugin-process = "2"
# 加密相关依赖
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1.7"
open = "5.3.0"

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }

